Fix vertical alignment in gravatar-mini.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -559,6 +559,7 @@ h4 {
     display: inline;
     float: none;
     width: 25px;
+    vertical-align: text-bottom;
   }
 
   #home #search-box {
